Fixes sidebar overflow.

--- a/style.css
+++ b/style.css
@@ -548,6 +548,7 @@ footer {
   display: none;
   box-sizing: border-box;
   font-size: 0.8em;
+  overflow: hidden;
 }
 #side-nav .menu {
   display: none;
